--- a/skin/build.gradle
+++ b/skin/build.gradle
@@ -31,4 +31,5 @@ android {
 dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation files('libs/jcc-0.7.3_2.jar')
 }
