--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,9 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -24,6 +26,7 @@
         <activity android:name=".TwoActivity"/>
         <activity android:name=".ThreeActivity"/>
         <activity android:name=".ListActivity"/>
+        <activity android:name=".WebViewActivity"/>
     </application>
 
 </manifest>
