屏幕分辨率适配

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.hjq:xxpermissions:9.8'
+    implementation 'me.jessyan:autosize:1.2.1'
 }
