--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,14 @@
         <activity android:name=".ThreeActivity"/>
         <activity android:name=".ListActivity"/>
         <activity android:name=".WebViewActivity"/>
+
+        <meta-data
+            android:name="design_width_in_dp"
+            android:value="540"/>
+        <meta-data
+            android:name="design_height_in_dp"
+            android:value="640"/>
+
     </application>
 
 </manifest>
