--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,10 +35,8 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:2.0.1'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.40'
 //    implementation project(path: ':skin')
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.hjq:xxpermissions:9.8'
     implementation 'me.jessyan:autosize:1.2.1'
-    implementation 'com.github.lexluthors:skinEngine:1.0'
+//    implementation 'com.github.lexluthors:skinEngine:1.0'
+    implementation 'com.gyzq.skin:skinEngine:3.0.1'
 }
