--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 buildscript {
     repositories {
         google()
-        mavenCentral()
+//        mavenCentral()
+        maven { url 'http://60.174.200.97:28081/nexus/content/groups/gy-public/' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.1"
@@ -15,8 +16,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+//        mavenCentral()
+//        jcenter() // Warning: this repository is going to shut down soon
 //        maven { url 'https://jitpack.io' }
         maven { url 'http://60.174.200.97:28081/nexus/content/groups/gy-public/' }
     }
