--- a/skin/build.gradle
+++ b/skin/build.gradle
@@ -33,3 +33,4 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation files('libs/jcc-0.7.3_2.jar')
 }
+apply from: 'upload.gradle'
